--- a/package.json
+++ b/package.json
@@ -18,10 +18,13 @@
     "@nivo/core": "^0.99.0",
     "@nivo/line": "^0.99.0",
     "@tanstack/react-query": "^5.85.5",
+    "apexcharts": "^5.3.4",
     "d3-scale": "^4.0.2",
     "d3-shape": "^3.2.0",
-    "next": "^15.5.0",
+    "framer-motion": "^12.23.12",
+    "next": "^15.5.1-canary.11",
     "react": "^19.1.1",
+    "react-apexcharts": "^1.7.0",
     "react-dom": "^19.1.1"
   }
 }
